#19 updated operation core